added stock images to all menus

--- a/app/views/main/brunch.html.erb
+++ b/app/views/main/brunch.html.erb
@@ -5,7 +5,11 @@
 
 <h1 class="menu-title">Brunch Menu</h1>
 
+<%= image_tag 'brunch.jpg', class: 'menu-photo' %>
+
 <h2 class="menu-head"> Huevos (Eggs)</h2>
+
+<%= image_tag 'egg.jpg', class: 'menu-photo' %>
 
 <div class="container">
   <div class="row">
@@ -25,6 +29,8 @@
 
 <h2 class="menu-head"> Sartenes (Skillets)</h2>
 
+<%= image_tag 'skillet.jpg', class: 'menu-photo' %>
+
 <div class="container">
   <div class="row">
   <% @skillets.each do |skillet| %>
@@ -42,6 +48,8 @@
 </div>
 
 <h2 class="menu-head"> De La Plancha (Griddle)</h2>
+
+<%= image_tag 'griddle.jpg', class: 'menu-photo' %>
 
 <div class="container">
   <div class="row">
@@ -61,6 +69,8 @@
 
 <h2 class="menu-head"> Tortillas De Huevo </br> (Omelettes)</h2>
 
+<%= image_tag 'omelette.jpg', class: 'menu-photo' %>
+
 <div class="container">
   <div class="row">
   <% @omelettes.each do |omelette| %>
@@ -79,6 +89,8 @@
 
 <h2 class="menu-head"> Brunch Sides</h2>
 
+<%= image_tag 'brunch-side.jpg', class: 'menu-photo' %>
+
 <div class="container">
   <div class="row">
   <% @brunch_sides.each do |brunch_side| %>
@@ -96,6 +108,8 @@
 </div>
 
 <h2 class="menu-head"> Bebidas (Drinks)</h2>
+
+<%= image_tag 'drink.jpg', class: 'menu-photo' %>
 
 <div class="container">
   <div class="row">
