--- a/app/views/main/dinner.html.erb
+++ b/app/views/main/dinner.html.erb
@@ -1,6 +1,10 @@
 <h1 class="menu-title">Dinner Menu</h1>
 
+<%= image_tag 'dinner.jpg', class: 'menu-photo' %>
+
 <h2 class="menu-head">Bisteks (Steaks)</h2>
+
+<%= image_tag 'steak.jpg', class: 'menu-photo' %>
 
 <div class="container">
   <div class="row">
@@ -20,6 +24,8 @@
 
 <h2 class="menu-head">Pollo (Chicken)</h2>
 
+<%= image_tag 'chicken.jpg', class: 'menu-photo' %>
+
 <div class="container">
   <div class="row">
   <% @chickens.each do |chicken| %>
@@ -37,6 +43,8 @@
 </div>
 
 <h2 class="menu-head">Cerdo (Pork)</h2>
+
+<%= image_tag 'pork.jpg', class: 'menu-photo' %>
 
 <div class="container">
   <div class="row">
@@ -57,6 +65,8 @@
 
 <h2 class="menu-head">Mariscos (Seafood)</h2>
 
+<%= image_tag 'seafood.jpg', class: 'menu-photo' %>
+
 <div class="container">
   <div class="row">
   <% @seafoods.each do |seafood| %>
@@ -76,6 +86,8 @@
 
 <h2 class="menu-head">Side Dishes</h2>
 
+<%= image_tag 'side.jpg', class: 'menu-photo' %>
+
 <div class="container">
   <div class="row">
   <% @sides.each do |side| %>
@@ -94,7 +106,11 @@
 
 <h1 class="menu-title"> Otras Especilidades </br> (Other Specialties)</h1>
 
+<%= image_tag 'special.jpg', class: 'menu-photo' %>
+
 <h2 class="menu-head">Fajitas</h2>
+
+<%= image_tag 'fajita.jpg', class: 'menu-photo' %>
 
 <div class="container">
   <div class="row">
@@ -115,6 +131,8 @@
 
 <h2 class="menu-head">Chimichangas</h2>
 
+<%= image_tag 'chimichanga.jpg', class: 'menu-photo' %>
+
 <div class="container">
   <div class="row">
   <% @chimichangas.each do |chimichanga| %>
@@ -132,6 +150,8 @@
 </div>
 
 <h2 class="menu-head">Tacos</h2>
+
+<%= image_tag 'taco.jpg', class: 'menu-photo' %>
 
 <div class="container">
   <div class="row">
@@ -151,6 +171,8 @@
 
 <h2 class="menu-head">Quesadillas</h2>
 
+<%= image_tag 'quesadilla.jpg', class: 'menu-photo' %>
+
 <div class="container">
   <div class="row">
   <% @quesadillas.each do |quesadilla| %>
@@ -169,6 +191,8 @@
 
 <h2 class="menu-head">Enchiladas</h2>
 
+<%= image_tag 'enchilada.jpg', class: 'menu-photo' %>
+
 <div class="container">
   <div class="row">
   <% @enchiladas.each do |enchilada| %>
@@ -186,6 +210,8 @@
 </div>
 
 <h2 class="menu-head"> Bebidas (Drinks)</h2>
+
+<%= image_tag 'drink.jpg', class: 'menu-photo' %>
 
 <div class="container">
   <div class="row">
