--- a/app/views/main/lunch.html.erb
+++ b/app/views/main/lunch.html.erb
@@ -5,6 +5,8 @@
 <h1 class="menu-title">Lunch Specials</h1>
 <h2 class="menu-head"> Served Monday - Friday 11AM - 3PM</h2>
 
+<%= image_tag 'lunch.jpg', class: 'menu-photo' %>
+
 <div class="container">
   <div class="row">
   <% @lunches.each do |lunch| %>
@@ -23,6 +25,7 @@
 
 <h2 class="menu-head"> Bebidas (Drinks)</h2>
 
+<%= image_tag 'drink.jpg', class: 'menu-photo' %>
 
 <div class="container">
   <div class="row">
