--- a/app/views/main/tequila.html.erb
+++ b/app/views/main/tequila.html.erb
@@ -5,6 +5,8 @@
 
 <h1 class="menu-title">Tequilas</h1>
 
+<%= image_tag 'tequila.jpg', class: 'menu-photo' %>
+
 <h2 class="menu-head">Blanco (White)</h2>
 
 <div class="container">
@@ -133,7 +135,11 @@
 
 <h1 class="menu-title">Spirits</h1>
 
+<%= image_tag 'spirit.jpg', class: 'menu-photo' %>
+
 <h2 class="menu-head">Vodka</h2>
+
+<%= image_tag 'vodka.jpg', class: 'menu-photo' %>
 
 <div class="container">
 	<div class="row">
@@ -151,6 +157,8 @@
 </div>
 
 <h2 class="menu-head"> Rum</h2>
+
+<%= image_tag 'rum.jpg', class: 'menu-photo' %>
 
 <div class="container">
 	<div class="row">
@@ -170,6 +178,8 @@
 
 <h2 class="menu-head">Gin</h2>
 
+<%= image_tag 'gin.jpg', class: 'menu-photo' %>
+
 <div class="container">
 	<div class="row">
   <% @gins.each do |gin| %>
@@ -187,6 +197,8 @@
 
 
 <h2 class="menu-head"> Bourbon / Whiskey</h2>
+
+<%= image_tag 'whiskey.jpg', class: 'menu-photo' %>
 
 <div class="container">
 	<div class="row">
@@ -206,6 +218,8 @@
 
 <h2 class="menu-head">Scotch</h2>
 
+<%= image_tag 'scotch.jpg', class: 'menu-photo' %>
+
 <div class="container">
 	<div class="row">
   <% @scotchs.each do |scotch| %>
@@ -224,6 +238,8 @@
 
 <h2 class="menu-head">Liqueurs & Cordials</h2>
 
+<%= image_tag 'liqueur.jpg', class: 'menu-photo' %>
+
 <div class="container">
 	<div class="row">
   <% @liqueurs.each do |liqueur| %>
@@ -241,6 +257,8 @@
 
 
 <h1 class="menu-title"> Beer</h1>
+
+<%= image_tag 'beer.jpg', class: 'menu-photo' %>
 
 <div class="row">
   <div class="col-sm-6">
@@ -297,9 +315,13 @@
 
 <h1 class= "menu-head"> MICHELADA</h1>
 
+<%= image_tag 'michelada.jpg', class: 'menu-photo' %>
+
   <p class="michelada"> Made With Sangarita Lime Juice Hot Sauce and Your Favorite Beer</P>
 
 <h2 class="menu-title"> Wine</h2>
+
+<%= image_tag 'wine.jpg', class: 'menu-photo' %>
 
 <div class="row">
   <div class="col-sm-6">
@@ -354,6 +376,8 @@
 
 <h2 class="menu-title"> Sangria</h2>
 
+<%= image_tag 'sangria.jpg', class: 'menu-photo' %>
+
 <div class="row">
   <div class="col-sm-6">
 <h2 class= "menu-head">White</h2>
@@ -392,6 +416,8 @@
 
 <h2 class="menu-title">House Margaritas</h2>
 
+<%= image_tag 'margarita.jpg', class: 'menu-photo' %>
+
 <div class="container">
 	<div class="row">
   <% @margaritas.each do |margarita| %>
@@ -412,6 +438,8 @@
 </div>
 
 <h2 class="menu-head"> Bebidas (Drinks)</h2>
+
+<%= image_tag 'drink.jpg', class: 'menu-photo' %>
 
 <div class="container">
   <div class="row">
