--- a/app/views/main/dessert.html.erb
+++ b/app/views/main/dessert.html.erb
@@ -5,6 +5,7 @@
 
 <h1 class="menu-title">Postres (Desserts)</h1>
 
+<%= image_tag 'dessert.jpg', class: 'menu-photo' %>
 
 <div class="container">
   <div class="row">
