--- a/app/views/main/apply.html.erb
+++ b/app/views/main/apply.html.erb
@@ -8,7 +8,7 @@
 <h2 class="app-inst">Instructions<h2>
 	<div class="container">
 	<h3 class="app-inst"> Please click the button below to download the PDF application.</h3>
-	<h3 class="app-inst">Fill out the application to it's entirety, do not leave any fields blank.</h3>
+	<h3 class="app-inst">Fill out the application in its entirety, do not leave any fields blank.</h3>
 	<h3 class="app-inst">When completed, you may turn this application into someone at The Mayan Kitchen, or you may email it to admin@mayankitchen.com</h3>
 
 
