--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -15,6 +15,10 @@
       <div><%= image_tag 'carousel01.jpg', class: 'img-fluid' %></div>
       <div><%= image_tag 'carousel02.jpg', class: 'img-fluid' %></div>
       <div><%= image_tag 'carousel03.jpg', class: 'img-fluid' %></div>
+      <div><%= image_tag 'carousel04.jpg', class: 'img-fluid' %></div>
+      <div><%= image_tag 'carousel05.jpg', class: 'img-fluid' %></div>
+      <div><%= image_tag 'carousel06.jpg', class: 'img-fluid' %></div>
+      <div><%= image_tag 'carousel07.jpg', class: 'img-fluid' %></div>
     </div>
 
     <script type="text/javascript">
