minor changes to apply and hours of operaction

--- a/app/views/main/apply.html.erb
+++ b/app/views/main/apply.html.erb
@@ -9,7 +9,7 @@
 	<div class="container">
 	<h3 class="app-inst"> Please click the button below to download the PDF application.</h3>
 	<h3 class="app-inst">Fill out the application in its entirety, do not leave any fields blank.</h3>
-	<h3 class="app-inst">When completed, you may turn this application into someone at The Mayan Kitchen, or you may email it to admin@mayankitchen.com</h3>
+	<h3 class="app-inst">When completed, you may turn this application in to someone at The Mayan Kitchen.</h3>
 
 
 
