--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -66,7 +66,10 @@ Chattanooga, TN 37402</p>
           <h4 class="menu-head">Follow Us!</h4>
     <div class="container">
     <%= image_tag 'facebook.png' %>
-    <%= image_tag 'twitter.png' %>
+    <%= image_tag 'insta.png' %>
+    <%= image_tag 'yelp.png' %>
+    <%= image_tag 'trip.png' %>
+
   </div>
         </div>
       </div>
