activated social media buttons

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -65,10 +65,18 @@ Chattanooga, TN 37402</p>
         <div class="card block">
           <h4 class="menu-head">Follow Us!</h4>
     <div class="container">
-    <%= image_tag 'facebook.png' %>
-    <%= image_tag 'insta.png' %>
-    <%= image_tag 'yelp.png' %>
-    <%= image_tag 'trip.png' %>
+    <a href="https://www.facebook.com/MayanKitchenChatt/">
+      <%= image_tag 'facebook.png' %>
+    </a>
+    <a href="https://www.instagram.com/mayankitchen/">
+      <%= image_tag 'insta.png' %>
+    </a>
+    <a href="https://www.yelp.com/biz/mayan-kitchen-chattanooga-2">
+      <%= image_tag 'yelp.png' %>
+    </a>
+    <a href="https://www.tripadvisor.com/Restaurant_Review-g54946-d13166197-Reviews-Mayan_Kitchen-Chattanooga_Tennessee.html">
+      <%= image_tag 'trip.png' %>
+    </a>
 
   </div>
         </div>
