--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -65,16 +65,16 @@ Chattanooga, TN 37402</p>
         <div class="card block">
           <h4 class="menu-head">Follow Us!</h4>
     <div class="container">
-    <a href="https://www.facebook.com/MayanKitchenChatt/">
+    <a href="https://www.facebook.com/MayanKitchenChatt/" target="_blank">
       <%= image_tag 'facebook.png' %>
     </a>
-    <a href="https://www.instagram.com/mayankitchen/">
+    <a href="https://www.instagram.com/mayankitchen/" target="_blank">
       <%= image_tag 'insta.png' %>
     </a>
-    <a href="https://www.yelp.com/biz/mayan-kitchen-chattanooga-2">
+    <a href="https://www.yelp.com/biz/mayan-kitchen-chattanooga-2" target="_blank">
       <%= image_tag 'yelp.png' %>
     </a>
-    <a href="https://www.tripadvisor.com/Restaurant_Review-g54946-d13166197-Reviews-Mayan_Kitchen-Chattanooga_Tennessee.html">
+    <a href="https://www.tripadvisor.com/Restaurant_Review-g54946-d13166197-Reviews-Mayan_Kitchen-Chattanooga_Tennessee.html" target="_blank">
       <%= image_tag 'trip.png' %>
     </a>
 
