added city logo to footer, and added secondary logo to homepage

--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -11,6 +11,9 @@
 
 <%= image_tag 'mayan-logo.jpg', class: 'logo-home' %>
 
+<%= image_tag 'mayan-logo1.jpg', class: 'logo-home' %>
+
+
     <div class="carousel">
       <div><%= image_tag 'carousel01.jpg', class: 'img-fluid' %></div>
       <div><%= image_tag 'carousel02.jpg', class: 'img-fluid' %></div>
