--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -84,4 +84,14 @@ Chattanooga, TN 37402</p>
     </div>
 
 </div>
+
+<h1 class="menu-head">In the mood for something else?</h1>
+
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-6"><%= image_tag 'city-logo.png', class: 'logo-home' %>
+  </div>
+</div>
+
+
 </body>
