added back to top button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<button onclick="topFunction()" id="myBtn" title="Go to top">Back to Top</button>
   <head>
 
     <%= favicon_link_tag 'monkey.png' %>
