--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,12 @@
+<% unless action_name == "home" %>
+
 <div class="row">
   <div class="col-sm-3"></div>
   <div class="col-sm-6"><%= image_tag 'mayan-logo.jpg', class: 'logo-home' %>
   </div>
 </div>
+
+<% end %>
 
 <div class="row">
 
