rearranged photos and made minor changes for times

--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -29,7 +29,7 @@
       <div class="card-block-menu">
       <%= link_to "Lunch", lunch_path, class: "btn btn-danger" %>
     </div>
-              <p class="card-text">Mon-Fri 12PM-3PM</p>
+              <p class="card-text">Mon-Fri 11AM-3PM</p>
 
 </div>
 
@@ -42,7 +42,7 @@
       <div class="card-block-menu">
       <%= link_to "Brunch", brunch_path, class: "btn btn-danger" %>
     </div>
-              <p class="card-text">Sat & Sun 10AM-12PM</p>
+              <p class="card-text">Sat & Sun 10AM-3PM</p>
 
 </div>
 </div>
