--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -33,10 +33,8 @@ Chattanooga, TN 37402</p>
       <div class="card text-center">
         <div class="card block">
           <h4 class="menu-head">Hours</h4>
-          <h5>Mon - Thur</h5>
+          <h5>Mon - Fri</h5>
           <h6>11AM - 10PM</h6>
-          <h5 class="hours">Friday</h5>
-          <h6>11AM - 12AM</h6>
           <h5 class="hours">Saturday</h5>
           <h6>10AM - 10PM</h6>
           <h5 class="hours">Sunday</h5>
@@ -91,7 +89,7 @@ Chattanooga, TN 37402</p>
 
 <div class="row">
   <div class="col-sm-3"></div>
-  <div class="col-sm-6"><%= image_tag 'city-logo.png', class: 'logo-home' %>
+  <div class="col-sm-6"><%= image_tag 'city-logo.png', class: 'footer-logo' %>
   </div>
 </div>
 
