--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -87,7 +87,9 @@ Chattanooga, TN 37402</p>
 
 <h1 class="menu-head">In the mood for something else?</h1>
 
-  <div class="col-sm-6 mx-auto"><%= image_tag 'city-logo.png', class: 'footer-logo' %>
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-6"><%= image_tag 'city-logo.png', class: 'footer-logo', width: '400' %>
   </div>
 </div>
 
