--- a/app/views/main/dinner.html.erb
+++ b/app/views/main/dinner.html.erb
@@ -214,7 +214,7 @@
 <%= image_tag 'drink.jpg', class: 'menu-photo' %>
 
 <div class="container">
-  <div class="row">
+  <div class="row mx-auto">
   <% @drinks.each do |drink| %>
 
     <div class="col-sm-6 col-lg-4">
