updated photos for other menus, and removed height restriction.

--- a/app/views/main/appetizer.html.erb
+++ b/app/views/main/appetizer.html.erb
@@ -75,7 +75,7 @@
 
 <h2 class="menu-head">Favorite Dips</h2>
 
-<%= image_tag 'dip.jpg', class: 'menu-photo' %>
+<%= image_tag 'dips.jpg', class: 'menu-photo' %>
 
 
 <h4 id="nacho">Served with Tri Color Tortilla Chips</h4>
