--- a/app/views/main/lunch.html.erb
+++ b/app/views/main/lunch.html.erb
@@ -5,7 +5,7 @@
 <h1 class="menu-title">Lunch Specials</h1>
 <h2 class="menu-head"> Served Monday - Friday 11AM - 3PM</h2>
 
-<%= image_tag 'lunch.jpg', class: 'menu-photo' %>
+<%= image_tag 'lunchs.jpg', class: 'menu-photo' %>
 
 <div class="container">
   <div class="row">
