--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -12,7 +12,7 @@
   <div class="col-md-6 col-lg-4">
 
     <div class="card text-center">
-    <%= image_tag 'food01.jpg' %>
+    <%= image_tag 'steak.jpg', class: 'menu-group' %>
       <div class="card-block-menu">
       <%= link_to "Dinner", dinner_path, class: "btn btn-danger" %>
   </div>
@@ -25,7 +25,7 @@
 <div class="col-md-6 col-lg-4">
 
     <div class="card text-center">
-    <%= image_tag 'food02.jpg' %>
+    <%= image_tag 'lunch.jpg', class: 'menu-group' %>
       <div class="card-block-menu">
       <%= link_to "Lunch", lunch_path, class: "btn btn-danger" %>
     </div>
@@ -38,7 +38,7 @@
 <div class="col-md-6 col-lg-4">
 
     <div class="card text-center">
-    <%= image_tag 'food03.jpg' %>
+    <%= image_tag 'apps.jpg', class: 'menu-group' %>
       <div class="card-block-menu">
       <%= link_to "Brunch", brunch_path, class: "btn btn-danger" %>
     </div>
@@ -50,7 +50,7 @@
 <div class="col-md-6 col-lg-4">
 
     <div class="card text-center">
-    <%= image_tag 'food04.jpg' %>
+    <%= image_tag 'desserts.jpg', class: 'menu-group' %>
       <div class="card-block-menu">
       <%= link_to "Dessert", dessert_path, class: "btn btn-danger" %>
   </div>
@@ -60,7 +60,7 @@
 <div class="col-md-6 col-lg-4">
 
     <div class="card text-center">
-    <%= image_tag 'food02.jpg' %>
+    <%= image_tag 'apps.jpg', class: 'menu-group' %>
       <div class="card-block-menu">
       <%= link_to "Apps & Snacks", apps_path, class: "btn btn-danger" %>
   </div>
@@ -70,7 +70,7 @@
 <div class="col-md-6 col-lg-4">
 
     <div class="card text-center">
-    <%= image_tag 'food02.jpg' %>
+    <%= image_tag 'tequila.jpg', class: 'menu-group' %>
       <div class="card-block-menu">
       <%= link_to "Tequila Bar", drinks_path, class: "btn btn-danger" %>
   </div>
