--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -93,5 +93,91 @@ Chattanooga, TN 37402</p>
   </div>
 </div>
 
+<div class="row">
+
+    <div class="col-sm-4">
+                <h4 class="menu-head">Visit Us!</h4>
+
+      <div class="card text-center">
+        <div class="card block">
+          <p class="card-text">901 Carter Street</br> Chattanooga TN 37402 </p>
+
+      <a class="btn btn-danger btn-xlg" href="https://www.google.com/maps/place/901+Carter+St,+Chattanooga,+TN+37402/@35.0452713,-85.3146306,17z/data=!3m1!4b1!4m5!3m4!1s0x88605e7d7312f895:0xd9d4db230dc39b77!8m2!3d35.0452713!4d-85.3124419" style="padding-left:15px;" target="_blank">
+          Directions 
+          </a>    
+
+          <p class="card-text">7641 Lee Highway</br> Chattanooga TN 37423</p>
+
+      <a class="btn btn-danger btn-xlg" href="https://www.google.com/maps/place/7641+Lee+Hwy,+Chattanooga,+TN+37421/@35.0605656,-85.1373766,17z/data=!3m1!4b1!4m5!3m4!1s0x8860631059db3e0f:0xae1f109fcd9daafa!8m2!3d35.0605656!4d-85.1351879" style="padding-left:15px;" target="_blank">
+          Directions 
+          </a>    
+
+          <p class="card-text">919 Old 25th Street</br> Cleveland TN 37311</p>
+
+      <a class="btn btn-danger btn-xlg" href="https://www.google.com/maps/place/919+Old+25th+St+NW,+Cleveland,+TN+37311/@35.1842187,-84.8775488,17z/data=!3m1!4b1!4m5!3m4!1s0x885e2be7d240d29f:0xb6f1dfced7a7f8d!8m2!3d35.1842187!4d-84.8753601" target="_blank" style="padding-left:15px;">
+          Directions 
+          </a>    
+
+
+        </div>
+      </div>
+    </div>
+
+
+
+    <div class="col-sm-4">
+      <div class="card text-center">
+        <div class="card block">
+          <h4 class="menu-head">Call Us!</h4>
+          <p class="card-text">901 Carter Street</p>
+          <a class="btn btn-danger btn-xlg" href="tel: 423-634-9190" style="padding:15px;">
+          Call <span class="glyphicon glyphicon-earphone" style="padding-left:0px; padding-right:0px;"></span> 423-634-9190
+          </a>
+
+          <p class="card-text">7641 Lee Highway</p>
+          <a class="btn btn-danger btn-xlg" href="tel: 423-485-8222" style="padding:15px;">
+          Call <span class="glyphicon glyphicon-earphone" style="padding-left:0px; padding-right:0px;"></span>  423-485-8222
+          </a>
+
+          <p class="card-text">919 Old 25th Street</p>
+          <a class="btn btn-danger btn-xlg" href="tel: 423-790-7460" style="padding:15px;">
+          Call <span class="glyphicon glyphicon-earphone" style="padding-left:0px; padding-right:0px;"></span>423-790-7460
+          </a>
+
+
+        </div>
+      </div>
+    </div>
+
+
+    <div class="col-sm-4">
+      <div class="card text-center">
+        <div class="card block">
+          <h4 class="menu-head">Browse The Menu!</h4>
+            <a class="btn btn-danger btn-xlg" href="https://citycafemenu.com/" style="padding:15px;" target="_blank">CityCafeMenu.com</a>
+
+          <h4 class="menu-head">Follow Us!</h4>
+    <div class="container">
+    <a href="https://www.facebook.com/MayanKitchenChatt/" target="_blank">
+      <%= image_tag 'facebook.png' %>
+    </a>
+    <a href="https://www.instagram.com/mayankitchen/" target="_blank">
+      <%= image_tag 'insta.png' %>
+    </a>
+    <a href="https://www.yelp.com/biz/mayan-kitchen-chattanooga-2" target="_blank">
+      <%= image_tag 'yelp.png' %>
+    </a>
+    <a href="https://www.tripadvisor.com/Restaurant_Review-g54946-d13166197-Reviews-Mayan_Kitchen-Chattanooga_Tennessee.html" target="_blank">
+      <%= image_tag 'trip.png' %>
+    </a>
+
+  </div>
+        </div>
+      </div>
+    </div>
+
+</div>
+
+
 
 </body>
