added headers to other pages

--- a/app/views/main/appetizer.html.erb
+++ b/app/views/main/appetizer.html.erb
@@ -2,6 +2,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
+<%= render 'layouts/header' %>
+
 <p id="notice"><%= notice %></p>
 
 <h1 class="menu-title">Appetizers Snacks & Salads</h1>
