--- a/app/views/main/dessert.html.erb
+++ b/app/views/main/dessert.html.erb
@@ -2,6 +2,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
+<%= render 'layouts/header' %>
 
 <h1 class="menu-title">Postres (Desserts)</h1>
 
