--- a/app/views/main/lunch.html.erb
+++ b/app/views/main/lunch.html.erb
@@ -1,6 +1,10 @@
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
+<%= render 'layouts/header' %>
+
 
 <h1 class="menu-title">Lunch Specials</h1>
 <h2 class="menu-head"> Served Monday - Friday 11AM - 3PM</h2>
