--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -154,7 +154,7 @@ Chattanooga, TN 37402</p>
       <div class="card text-center">
         <div class="card block">
           <h4 class="menu-head">Browse The Menu!</h4>
-            <a class="btn btn-danger btn-xlg" href="https://citycafemenu.com/" style="padding:15px;" target="_blank">CityCafeMenu.com</a>
+            <a class="btn btn-danger btn-xlg" href="https://citycafemenu.com/" style="padding:15px;" target="_blank">City Cafe Menu</a>
 
           <h4 class="menu-head">Follow Us!</h4>
     <div class="container">
