updates for alignment and color scheme

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -16,13 +16,12 @@
           <p class="card-text">507 Broad Street
 Chattanooga, TN 37402</p>
 
-      <a class="btn btn-danger btn-xlg" href="https://www.google.com/maps/place/507+Broad+St,+Chattanooga,+TN+37402/@35.050631,-85.311094,14z/data=!4m5!3m4!1s0x88605e6253590e9f:0x58dc5c4652d15155!8m2!3d35.0506313!4d-85.3110936?hl=en-US" style="padding-left:15px;">
+      <a class="btn btn-warning btn-xlg" href="https://www.google.com/maps/place/507+Broad+St,+Chattanooga,+TN+37402/@35.050631,-85.311094,14z/data=!4m5!3m4!1s0x88605e6253590e9f:0x58dc5c4652d15155!8m2!3d35.0506313!4d-85.3110936?hl=en-US" >
           Directions 
           </a>    
 
-<div class="container">
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13064.127065609191!2d-85.32191899924183!3d35.05594488694202!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88605e6253590e9f%3A0x58dc5c4652d15155!2s507+Broad+St%2C+Chattanooga%2C+TN+37402!5e0!3m2!1sen!2sus!4v1509159902317" width="250" height="300" frameborder="0" style="border:0; padding-top: 20px;" allowfullscreen></iframe>
-</div>
+
 
         </div>
       </div>
@@ -48,11 +47,11 @@ Chattanooga, TN 37402</p>
       <div class="card text-center">
         <div class="card block">
           <h4 class="menu-head">Call Us!</h4>
-          <a class="btn btn-danger btn-xlg" href="tel:423-682-7835" style="padding:15px;">
-          Call <span class="glyphicon glyphicon-earphone" style="padding-left:0px; padding-right:0px;"></span>423-682-7835
+          <a class="btn btn-warning btn-xlg" href="tel:423-682-7835" style="padding:15px;">
+          <span class="glyphicon glyphicon-earphone" style="padding-left:0px; padding-right:0px;"></span>423-682-7835
           </a>
           <p class="menu-head">Join Our Team!</p>
-          <%= link_to "Apply Now", apply_path, class: "btn btn-danger" %>
+          <%= link_to "Apply Now", apply_path, class: "btn btn-warning" %>
 
 
         </div>
@@ -102,19 +101,19 @@ Chattanooga, TN 37402</p>
         <div class="card block">
           <p class="card-text">901 Carter Street</br> Chattanooga TN 37402 </p>
 
-      <a class="btn btn-danger btn-xlg" href="https://www.google.com/maps/place/901+Carter+St,+Chattanooga,+TN+37402/@35.0452713,-85.3146306,17z/data=!3m1!4b1!4m5!3m4!1s0x88605e7d7312f895:0xd9d4db230dc39b77!8m2!3d35.0452713!4d-85.3124419" style="padding-left:15px;" target="_blank">
+      <a class="btn btn-warning btn-xlg" href="https://www.google.com/maps/place/901+Carter+St,+Chattanooga,+TN+37402/@35.0452713,-85.3146306,17z/data=!3m1!4b1!4m5!3m4!1s0x88605e7d7312f895:0xd9d4db230dc39b77!8m2!3d35.0452713!4d-85.3124419" style="padding-left:15px;" target="_blank">
           Directions 
           </a>    
 
           <p class="card-text">7641 Lee Highway</br> Chattanooga TN 37423</p>
 
-      <a class="btn btn-danger btn-xlg" href="https://www.google.com/maps/place/7641+Lee+Hwy,+Chattanooga,+TN+37421/@35.0605656,-85.1373766,17z/data=!3m1!4b1!4m5!3m4!1s0x8860631059db3e0f:0xae1f109fcd9daafa!8m2!3d35.0605656!4d-85.1351879" style="padding-left:15px;" target="_blank">
+      <a class="btn btn-warning btn-xlg" href="https://www.google.com/maps/place/7641+Lee+Hwy,+Chattanooga,+TN+37421/@35.0605656,-85.1373766,17z/data=!3m1!4b1!4m5!3m4!1s0x8860631059db3e0f:0xae1f109fcd9daafa!8m2!3d35.0605656!4d-85.1351879" style="padding-left:15px;" target="_blank">
           Directions 
           </a>    
 
           <p class="card-text">919 Old 25th Street</br> Cleveland TN 37311</p>
 
-      <a class="btn btn-danger btn-xlg" href="https://www.google.com/maps/place/919+Old+25th+St+NW,+Cleveland,+TN+37311/@35.1842187,-84.8775488,17z/data=!3m1!4b1!4m5!3m4!1s0x885e2be7d240d29f:0xb6f1dfced7a7f8d!8m2!3d35.1842187!4d-84.8753601" target="_blank" style="padding-left:15px;">
+      <a class="btn btn-warning btn-xlg" href="https://www.google.com/maps/place/919+Old+25th+St+NW,+Cleveland,+TN+37311/@35.1842187,-84.8775488,17z/data=!3m1!4b1!4m5!3m4!1s0x885e2be7d240d29f:0xb6f1dfced7a7f8d!8m2!3d35.1842187!4d-84.8753601" target="_blank" style="padding-left:15px;">
           Directions 
           </a>    
 
@@ -130,18 +129,18 @@ Chattanooga, TN 37402</p>
         <div class="card block">
           <h4 class="menu-head">Call Us!</h4>
           <p class="card-text">901 Carter Street</p>
-          <a class="btn btn-danger btn-xlg" href="tel: 423-634-9190" style="padding:15px;">
-          Call <span class="glyphicon glyphicon-earphone" style="padding-left:0px; padding-right:0px;"></span> 423-634-9190
+          <a class="btn btn-warning btn-xlg" href="tel: 423-634-9190" style="padding:15px;">
+           <span class="glyphicon glyphicon-earphone" style="padding-left:0px; padding-right:0px;"></span> 423-634-9190
           </a>
 
           <p class="card-text">7641 Lee Highway</p>
-          <a class="btn btn-danger btn-xlg" href="tel: 423-485-8222" style="padding:15px;">
-          Call <span class="glyphicon glyphicon-earphone" style="padding-left:0px; padding-right:0px;"></span>  423-485-8222
+          <a class="btn btn-warning btn-xlg" href="tel: 423-485-8222" style="padding:15px;">
+          <span class="glyphicon glyphicon-earphone" style="padding-left:0px; padding-right:0px;"></span>  423-485-8222
           </a>
 
           <p class="card-text">919 Old 25th Street</p>
-          <a class="btn btn-danger btn-xlg" href="tel: 423-790-7460" style="padding:15px;">
-          Call <span class="glyphicon glyphicon-earphone" style="padding-left:0px; padding-right:0px;"></span>423-790-7460
+          <a class="btn btn-warning btn-xlg" href="tel: 423-790-7460" style="padding:15px;">
+          <span class="glyphicon glyphicon-earphone" style="padding-left:0px; padding-right:0px;"></span>423-790-7460
           </a>
 
 
@@ -154,7 +153,7 @@ Chattanooga, TN 37402</p>
       <div class="card text-center">
         <div class="card block">
           <h4 class="menu-head">Browse The Menu!</h4>
-            <a class="btn btn-danger btn-xlg" href="https://citycafemenu.com/" style="padding:15px;" target="_blank">City Cafe Menu</a>
+            <a class="btn btn-warning btn-xlg" href="https://citycafemenu.com/" style="padding:15px;" target="_blank">City Cafe Menu</a>
 
           <h4 class="menu-head">Follow Us!</h4>
     <div class="container">
