--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -13,11 +13,13 @@
 
     <div class="card text-center">
     <%= image_tag 'steak.jpg', class: 'menu-group' %>
+</div>
+<div class="row">
+  <div class="col-sm-5"></div>
       <div class="card-block-menu">
       <%= link_to "Dinner", dinner_path, class: "btn btn-danger" %>
   </div>
 </div>
-
 </div>
 
 
@@ -26,35 +28,52 @@
 
     <div class="card text-center">
     <%= image_tag 'lunch.jpg', class: 'menu-group' %>
-      <div class="card-block-menu">
-      <%= link_to "Lunch", lunch_path, class: "btn btn-danger" %>
-    </div>
-              <p class="card-text">Mon-Fri 11AM-3PM</p>
 
 </div>
 
+<div class="row">
+  <div class="col-sm-5"></div>
+
+      <div class="card-block-menu">
+      <%= link_to "Lunch", lunch_path, class: "btn btn-danger" %>
+    </div>
+ 
+
+</div>
+</div>
 </div>
 
 <div class="col-md-6 col-lg-4">
 
     <div class="card text-center">
     <%= image_tag 'apps.jpg', class: 'menu-group' %>
+
+</div>
+
+<div class="row">
+  <div class="col-sm-5"></div>
+
       <div class="card-block-menu">
       <%= link_to "Brunch", brunch_path, class: "btn btn-danger" %>
     </div>
-              <p class="card-text">Sat & Sun 10AM-3PM</p>
-
 </div>
+
 </div>
 
 <div class="col-md-6 col-lg-4">
 
     <div class="card text-center">
     <%= image_tag 'desserts.jpg', class: 'menu-group' %>
+</div>
+
+<div class="row">
+  <div class="col-sm-5"></div>
+
       <div class="card-block-menu">
       <%= link_to "Dessert", dessert_path, class: "btn btn-danger" %>
   </div>
 </div>
+
 </div>
 
 <div class="col-md-6 col-lg-4">
