--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,8 @@
 
 
 body {
+
+  padding-left: 10px;
     background: black; 
     /* For browsers that do not support gradients */
 
@@ -42,8 +44,13 @@ h1, h2, h3, h4, h5, h6, p, a {
 }
 
 .btn-warning {
-    background: black;
+    background: dimgrey;
     color: white;
+}
+
+.btn-warning:hover {
+  background: darkgrey;
+  color: white;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
@@ -70,7 +77,7 @@ h1, h2, h3, h4, h5, h6, p, a {
     }
 
 .menu-head {
-  font: 100 40px/1.5 'Pacifico', Helvetica, sans-serif;
+  font: 100 30px/1.5 'Pacifico', Helvetica, sans-serif;
   color: white;
   text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
   background: black;
@@ -90,6 +97,7 @@ h1, h2, h3, h4, h5, h6, p, a {
 }
 
 .card-text {
+  text-align: center;
     font: 100 20px/1.5 Times New Roman;
     color: white;
     padding-left: 25px;
@@ -111,7 +119,7 @@ form {
 
 
 .menu-title {
-    font: 100 60px/1.5 'Pacifico', Helvetica, sans-serif;
+    font: 100 50px/1.5 'Pacifico', Helvetica, sans-serif;
     color: white;
     text-shadow: -2px 0 white, 0 2px white, 2px 0 white, 0 -2px white;
     background: black;
@@ -260,15 +268,16 @@ label {
 }
 
 .btn-danger {
-  background: dimgray;
-}
-
-.btn-danger:hover {
   background: black;
 }
 
+.btn-danger:hover {
+  background: dimgrey;
+}
+
 .card-block-menu {
-  background: dimgray;
+  background: none;
+  padding-top: 15px;
 }
 
 
