--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -41,7 +41,6 @@
 
 </div>
 </div>
-</div>
 
 <div class="col-md-6 col-lg-4">
 
@@ -57,7 +56,6 @@
       <%= link_to "Brunch", brunch_path, class: "btn btn-danger" %>
     </div>
 </div>
-
 </div>
 
 <div class="col-md-6 col-lg-4">
@@ -68,18 +66,24 @@
 
 <div class="row">
   <div class="col-sm-5"></div>
-
       <div class="card-block-menu">
       <%= link_to "Dessert", dessert_path, class: "btn btn-danger" %>
   </div>
-</div>
 
 </div>
+</div>
+
 
 <div class="col-md-6 col-lg-4">
 
     <div class="card text-center">
     <%= image_tag 'apps.jpg', class: 'menu-group' %>
+</div>
+
+<div class="row">
+  <div class="col-sm-4"></div>
+
+
       <div class="card-block-menu">
       <%= link_to "Apps & Snacks", apps_path, class: "btn btn-danger" %>
   </div>
