--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -133,7 +133,7 @@ form {
 
 
 .carousel {
-    padding-top: 25px;
+    padding-top: 15px;
 }
 
 .col-md-6 {
@@ -245,6 +245,7 @@ label {
 
 .img-fluid {
   width: 100%;
+  height: 350px;
 }
 
 .menu-photo {
