--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,11 +39,13 @@ h1, h2, h3, h4, h5, h6, p, a {
 }
 
 .btn-primary {
+    border-radius: 25px;
     background: black;
     color: #ffffff;
 }
 
 .btn-warning {
+    border-radius: 25px;
     background: dimgrey;
     color: white;
 }
@@ -77,6 +79,7 @@ h1, h2, h3, h4, h5, h6, p, a {
     }
 
 .menu-head {
+
   font: 100 30px/1.5 'Pacifico', Helvetica, sans-serif;
   color: white;
   text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
@@ -85,6 +88,7 @@ h1, h2, h3, h4, h5, h6, p, a {
   padding-top: 15px;
   padding-bottom: 15px;
   letter-spacing: 2px;
+  border-radius: 25px;
 }
 
 .card-title {
@@ -119,6 +123,8 @@ form {
 
 
 .menu-title {
+  padding-top: 10px;
+  border-radius: 25px;
     font: 100 40px/1.5 'Pacifico', Helvetica, sans-serif;
     color: white;
     text-shadow: 0px 0 white, 0 0px white, 0px 0 white, 0 0px white;
@@ -270,6 +276,7 @@ label {
 }
 
 .btn-danger {
+border-radius: 25px;
   background: black;
 }
 
