--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 
 <div class="row">
   <div class="col-sm-3"></div>
-  <div class="col-sm-6"><%= image_tag 'mayan-logo.jpg', class: 'logo-home' %>
+  <div class="col-sm-6"><%= image_tag 'monkey.jpg', class: 'logo-home' %>
   </div>
 </div>
 
