--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -17,7 +17,7 @@
 <div class="row">
   <div class="col-sm-5"></div>
       <div class="card-block-menu">
-      <%= link_to "Dinner", dinner_path, class: "btn btn-danger" %>
+      <%= link_to "Dinner", dinner_path, class: "btn btn-danger btn-rounded" %>
   </div>
 </div>
 </div>
