--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <button onclick="topFunction()" id="myBtn" title="Go to top">Back to Top</button>
   <head>
+<%= render 'layouts/header' %>
 
     <%= favicon_link_tag 'monkey.png' %>
 
