--- a/app/views/main/contact.html.erb
+++ b/app/views/main/contact.html.erb
@@ -1,4 +1,3 @@
-<%= render 'layouts/header' %>
 <h1 class="menu-title"> Contact Us</h1>
 
 
@@ -43,11 +42,11 @@ Chattanooga, TN 37402</p>
       <div class="card text-center">
         <div class="card block">
           <h4 class="menu-head">Call Us!</h4>
-          <a class="btn btn-danger btn-xlg" href="tel:423-682-7835" style="padding:15px;">
+          <a class="btn btn-warning btn-xlg" href="tel:423-682-7835" style="padding:15px;">
           Call <span class="glyphicon glyphicon-earphone" style="padding-left:0px; padding-right:0px;"></span>423-682-7835
           </a>
           <p class="menu-head">Join Our Team!</p>
-          <%= link_to "Apply Now", apply_path, class: "btn btn-danger" %>
+          <%= link_to "Apply Now", apply_path, class: "btn btn-warning" %>
 
 
         </div>
