added viewport to application

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <html>
 <button onclick="topFunction()" id="myBtn" title="Go to top">Back to Top</button>
   <head>
