--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,7 @@
 </button>
 
 <!-- Brand -->
+  <%= image_tag "monkey.jpg", class: 'navlogo' %>
 
 <!-- Links -->
 <div class="collapse navbar-collapse" id="nav-content">   
