fixed height of dual carousel

--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -40,7 +40,7 @@
 <div class="col-sm-6">
     <div class="carousel" id="car2">
       <div><%= image_tag 'steak.jpg', class: 'img-fluid' %></div>
-      <div><%= image_tag 'quesadilla.jpg', class: 'img-fluid' %></div>
+      <div><%= image_tag 'special.jpg', class: 'img-fluid' %></div>
       <div><%= image_tag 'taco.jpg', class: 'img-fluid' %></div>
       <div><%= image_tag 'chimichanga.jpg', class: 'img-fluid' %></div>
       <div><%= image_tag 'seafood.jpg', class: 'img-fluid' %></div>
