fixed bug in css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -268,7 +268,7 @@ label {
 .menu-group {
   height: 200px;
   border: solid 3px;
-  border-color: 797979;
+  border-color: #797979;
 }
 
 .logo-home {
