fixed fonts and days of week

--- a/app/views/main/appetizer.html.erb
+++ b/app/views/main/appetizer.html.erb
@@ -3,7 +3,7 @@
 </head>
 
 
-<h1 class="menu-title">Appetizers Snacks & Salads</h1>
+<h1 class="menu-title">Appetizers</h1>
 
 <%= image_tag 'snack.jpg', class: 'menu-photo' %>
 
