--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -84,7 +84,7 @@
 
 
       <div class="card-block-menu">
-      <%= link_to "Apps & Snacks", apps_path, class: "btn btn-danger" %>
+      <%= link_to "Appetizers", apps_path, class: "btn btn-danger" %>
   </div>
 </div>
 </div>
