--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -96,7 +96,7 @@ h1, h2, h3, h4, h5, h6, p, a {
 }
 
 .card-title {
-   font: 100 30px/1.5 Times New Roman;
+   font: 100 30px/1.5 Helvetica;
    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
    letter-spacing: 3px;
     color: white;
@@ -106,7 +106,7 @@ h1, h2, h3, h4, h5, h6, p, a {
 
 .card-text {
   text-align: center;
-    font: 100 20px/1.5 Times New Roman;
+    font: 100 20px/1.5 Helvetica;
     color: white;
     padding-left: 25px;
 
