--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,7 +29,7 @@
     <%= link_to "Lunch", lunch_path, class: "dropdown-item"%>
     <%= link_to "Brunch", brunch_path, class: "dropdown-item"%>
     <%= link_to "Dessert", dessert_path, class: "dropdown-item" %>
-    <%= link_to "Apps & Snacks", apps_path, class: "dropdown-item" %>
+    <%= link_to "Appetizers", apps_path, class: "dropdown-item" %>
 
     <%= link_to "Tequilla Bar", drinks_path, class: "dropdown-item" %>
 
