added margins to menu-head

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -89,8 +89,8 @@ h1, h2, h3, h4, h5, h6, p, a {
   text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
   background: black;
   text-align: center;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  margin-top: 15px;
+  margin-bottom: 15px;
   letter-spacing: 2px;
   border-radius: 25px;
 }
