changed p to h4 for join our team in footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -53,7 +53,7 @@ Chattanooga, TN 37402</p>
           <a class="btn btn-warning btn-xlg" href="tel:423-682-7835" style="padding:15px;">
           <span class="glyphicon glyphicon-earphone" style="padding-left:0px; padding-right:0px;"></span>423-682-7835
           </a>
-          <p class="menu-head">Join Our Team!</p>
+          <h4 class="menu-head">Join Our Team!</h4>
           <%= link_to "Apply Now", apply_path, class: "btn btn-warning" %>
 
 
