cosmetic changes removed second carousel

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -82,6 +82,15 @@ h1, h2, h3, h4, h5, h6, p, a {
     border: 0 none;
     }
 
+  .dropdown-item {
+  background: black;
+  color: white;
+}
+
+.dropdown-menu {
+  background: black; 
+}
+
 .menu-head {
 
   font: 100 30px/1.5 'Pacifico', Helvetica, sans-serif;
