--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
 </button>
 
 <!-- Brand -->
-  <%= image_tag "monkey.jpg", class: 'navlogo' %>
+  <%= image_tag "monkeyl.jpg", class: 'navlogo' %>
 
 <!-- Links -->
 <div class="collapse navbar-collapse" id="nav-content">   
@@ -36,20 +36,24 @@
 </div>
 </li>
 
-    <li class="nav-item">
-    	<%= link_to "Apply", apply_path , class: "btn btn-primary" %>
+    <li>
 
-    </li>
+<div class="btn-group">
+  <%= link_to "Contact", contact_path, class: "btn btn-primary" %>
+  <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <span class="sr-only">Toggle Dropdown</span>
+  </button>
+  <div class="dropdown-menu">
+    <%= link_to "Apply", apply_path, class: "dropdown-item"%>
 
-    <li class="nav-item">
-      <%= link_to "Contact", contact_path , class: "btn btn-primary" %>
-
-    </li>
+</div>
 
 
 
 
 </ul>
+  
+  <%= image_tag "monkeyr.jpg", class: 'navlogo' %>
 
 </nav>
 </div>
