--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -3,7 +3,7 @@
 </head>
 
 
-  <h1 class="menu-title"> Menus</h1>
+  <h1 class="menu-title"> Menu</h1>
 
 <div class="row">
 <div class="container">
@@ -66,7 +66,7 @@
 <div class="row">
   <div class="col-sm-5"></div>
       <div class="card-block-menu">
-      <%= link_to "Dessert", dessert_path, class: "btn btn-danger" %>
+      <%= link_to "Desserts", dessert_path, class: "btn btn-danger" %>
   </div>
 
 </div>
