moved images on dinner page

--- a/app/views/main/dinner.html.erb
+++ b/app/views/main/dinner.html.erb
@@ -4,7 +4,8 @@
 
 <h2 class="menu-head">Bisteks (Steaks)</h2>
 
-<%= image_tag 'steak.jpg', class: 'menu-photo' %>
+
+<%= image_tag 'steak.jpg', class: 'img-fluid' %>
 
 <div class="container">
   <div class="row">
@@ -24,7 +25,14 @@
 
 <h2 class="menu-head">Pollo (Chicken)</h2>
 
-<%= image_tag 'chicken.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-2"></div>
+  <div class="col-sm-8">
+
+<%= image_tag 'chicken.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
@@ -44,7 +52,14 @@
 
 <h2 class="menu-head">Cerdo (Pork)</h2>
 
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-6">
+
 <%= image_tag 'pork.jpg', class: 'menu-photo' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
@@ -65,7 +80,8 @@
 
 <h2 class="menu-head">Mariscos (Seafood)</h2>
 
-<%= image_tag 'seafood.jpg', class: 'menu-photo' %>
+
+<%= image_tag 'seafood.jpg', class: 'img-fluid' %>
 
 <div class="container">
   <div class="row">
@@ -86,7 +102,14 @@
 
 <h2 class="menu-head">Side Dishes</h2>
 
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-6">
+
 <%= image_tag 'side.jpg', class: 'menu-photo' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
@@ -106,11 +129,25 @@
 
 <h1 class="menu-title"> Otras Especilidades </br> (Other Specialties)</h1>
 
+<div class="row">
+  <div class="col-sm-2"></div>
+  <div class="col-sm-8">
+
 <%= image_tag 'special.jpg', class: 'menu-photo' %>
+
+</div>
+</div>
 
 <h2 class="menu-head">Fajitas</h2>
 
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-6">
+
 <%= image_tag 'fajita.jpg', class: 'menu-photo' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
@@ -151,7 +188,14 @@
 
 <h2 class="menu-head">Tacos</h2>
 
+<div class="row">
+  <div class="col-sm-2"></div>
+  <div class="col-sm-6">
+
 <%= image_tag 'taco.jpg', class: 'menu-photo' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
@@ -171,7 +215,14 @@
 
 <h2 class="menu-head">Quesadillas</h2>
 
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-6">
+
 <%= image_tag 'quesadilla.jpg', class: 'menu-photo' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
@@ -211,7 +262,7 @@
 
 <h2 class="menu-head"> Bebidas (Drinks)</h2>
 
-<%= image_tag 'drink.jpg', class: 'menu-photo' %>
+<%= image_tag 'drink.jpg', class: 'img-fluid' %>
 
 <div class="container">
   <div class="row mx-auto">
