centered photos on dinner page

--- a/app/views/main/dinner.html.erb
+++ b/app/views/main/dinner.html.erb
@@ -4,8 +4,14 @@
 
 <h2 class="menu-head">Bisteks (Steaks)</h2>
 
+<div class="row">
+  <div class="col-sm-1"></div>
+  <div class="col-sm-10">
 
 <%= image_tag 'steak.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
@@ -26,8 +32,8 @@
 <h2 class="menu-head">Pollo (Chicken)</h2>
 
 <div class="row">
-  <div class="col-sm-2"></div>
-  <div class="col-sm-8">
+  <div class="col-sm-1"></div>
+  <div class="col-sm-10">
 
 <%= image_tag 'chicken.jpg', class: 'img-fluid' %>
 
@@ -53,10 +59,10 @@
 <h2 class="menu-head">Cerdo (Pork)</h2>
 
 <div class="row">
-  <div class="col-sm-3"></div>
-  <div class="col-sm-6">
+  <div class="col-sm-2"></div>
+  <div class="col-sm-8">
 
-<%= image_tag 'pork.jpg', class: 'menu-photo' %>
+<%= image_tag 'pork.jpg', class: 'img-fluid' %>
 
 </div>
 </div>
@@ -80,8 +86,14 @@
 
 <h2 class="menu-head">Mariscos (Seafood)</h2>
 
+<div class="row">
+  <div class="col-sm-1"></div>
+  <div class="col-sm-10">
 
 <%= image_tag 'seafood.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
@@ -103,10 +115,10 @@
 <h2 class="menu-head">Side Dishes</h2>
 
 <div class="row">
-  <div class="col-sm-3"></div>
-  <div class="col-sm-6">
+  <div class="col-sm-2"></div>
+  <div class="col-sm-8">
 
-<%= image_tag 'side.jpg', class: 'menu-photo' %>
+<%= image_tag 'side.jpg', class: 'img-fluid' %>
 
 </div>
 </div>
@@ -130,10 +142,10 @@
 <h1 class="menu-title"> Otras Especilidades </br> (Other Specialties)</h1>
 
 <div class="row">
-  <div class="col-sm-2"></div>
-  <div class="col-sm-8">
+  <div class="col-sm-1"></div>
+  <div class="col-sm-10">
 
-<%= image_tag 'special.jpg', class: 'menu-photo' %>
+<%= image_tag 'special.jpg', class: 'img-fluid' %>
 
 </div>
 </div>
@@ -144,7 +156,7 @@
   <div class="col-sm-3"></div>
   <div class="col-sm-6">
 
-<%= image_tag 'fajita.jpg', class: 'menu-photo' %>
+<%= image_tag 'fajita.jpg', class: 'img-fluid' %>
 
 </div>
 </div>
@@ -168,7 +180,14 @@
 
 <h2 class="menu-head">Chimichangas</h2>
 
-<%= image_tag 'chimichanga.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-1"></div>
+  <div class="col-sm-10">
+
+<%= image_tag 'chimichanga.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
@@ -190,9 +209,9 @@
 
 <div class="row">
   <div class="col-sm-2"></div>
-  <div class="col-sm-6">
+  <div class="col-sm-8">
 
-<%= image_tag 'taco.jpg', class: 'menu-photo' %>
+<%= image_tag 'taco.jpg', class: 'img-fluid' %>
 
 </div>
 </div>
@@ -219,7 +238,7 @@
   <div class="col-sm-3"></div>
   <div class="col-sm-6">
 
-<%= image_tag 'quesadilla.jpg', class: 'menu-photo' %>
+<%= image_tag 'quesadilla.jpg', class: 'img-fluid' %>
 
 </div>
 </div>
@@ -242,7 +261,15 @@
 
 <h2 class="menu-head">Enchiladas</h2>
 
-<%= image_tag 'enchilada.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-1"></div>
+  <div class="col-sm-10">
+
+
+<%= image_tag 'enchilada.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
@@ -262,7 +289,14 @@
 
 <h2 class="menu-head"> Bebidas (Drinks)</h2>
 
+<div class="row">
+  <div class="col-sm-1"></div>
+  <div class="col-sm-10">
+
 <%= image_tag 'drink.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row mx-auto">
