--- a/app/views/main/lunch.html.erb
+++ b/app/views/main/lunch.html.erb
@@ -8,7 +8,15 @@
 <h1 class="menu-title">Lunch Specials</h1>
 <h2 class="menu-head"> Served Monday - Friday 11AM - 3PM</h2>
 
+<div class="row">
+  <div class="col-sm-4"></div>
+  <div class="col-sm-6">
+
+
 <%= image_tag 'lunchs.jpg', class: 'menu-photo' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
@@ -28,7 +36,15 @@
 
 <h2 class="menu-head"> Bebidas (Drinks)</h2>
 
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-9">
+
+
 <%= image_tag 'drink.jpg', class: 'menu-photo' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
