--- a/app/views/main/brunch.html.erb
+++ b/app/views/main/brunch.html.erb
@@ -5,11 +5,27 @@
 
 <h1 class="menu-title">Brunch Menu</h1>
 
-<%= image_tag 'brunch.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-9">
+
+
+<%= image_tag 'brunch.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <h2 class="menu-head"> Huevos (Eggs)</h2>
 
-<%= image_tag 'egg.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-9">
+
+
+<%= image_tag 'egg.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
@@ -29,7 +45,15 @@
 
 <h2 class="menu-head"> Sartenes (Skillets)</h2>
 
-<%= image_tag 'skillet.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-9">
+
+
+<%= image_tag 'skillet.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
@@ -49,7 +73,15 @@
 
 <h2 class="menu-head"> De La Plancha (Griddle)</h2>
 
-<%= image_tag 'griddle.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-4"></div>
+  <div class="col-sm-6">
+
+
+<%= image_tag 'griddle.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
@@ -69,7 +101,15 @@
 
 <h2 class="menu-head"> Tortillas De Huevo </br> (Omelettes)</h2>
 
-<%= image_tag 'omelette.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-4"></div>
+  <div class="col-sm-6">
+
+
+<%= image_tag 'omelette.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
@@ -89,7 +129,15 @@
 
 <h2 class="menu-head"> Brunch Sides</h2>
 
-<%= image_tag 'brunch-side.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-9">
+
+
+<%= image_tag 'brunch-side.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
@@ -109,7 +157,15 @@
 
 <h2 class="menu-head"> Bebidas (Drinks)</h2>
 
-<%= image_tag 'drink.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-9">
+
+
+<%= image_tag 'drink.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
