--- a/app/views/main/dessert.html.erb
+++ b/app/views/main/dessert.html.erb
@@ -5,6 +5,13 @@
 
 <h1 class="menu-title">Postres (Desserts)</h1>
 
+<div class="row">
+  <div class="col-sm-4"></div>
+  <div class="col-sm-6">
+
+</div>
+</div>
+
 <%= image_tag 'dessert.jpg', class: 'menu-photo' %>
 
 <div class="container">
