--- a/app/views/main/appetizer.html.erb
+++ b/app/views/main/appetizer.html.erb
@@ -5,11 +5,27 @@
 
 <h1 class="menu-title">Appetizers</h1>
 
-<%= image_tag 'snack.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-9">
+
+
+<%= image_tag 'snack.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <h2 class="menu-head">Antojiotos (Appetizers)</h2>
 
-<%= image_tag 'appetizer.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-4"></div>
+  <div class="col-sm-6">
+
+
+<%= image_tag 'appetizer.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
@@ -29,7 +45,15 @@
 
 <h2 class="menu-head">Tapas</h2>
 
-<%= image_tag 'tapas.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-9">
+
+
+<%= image_tag 'tapas.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
@@ -50,8 +74,15 @@
 
 <h2 class="menu-head">Sopas (Soups)</h2>
 
-<%= image_tag 'soup.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-4"></div>
+  <div class="col-sm-6">
 
+
+<%= image_tag 'soup.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <h4 id="nacho">Cup $4.00 Bowl $6.00</h4>
 
@@ -74,8 +105,15 @@
 
 <h2 class="menu-head">Favorite Dips</h2>
 
-<%= image_tag 'dips.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-9">
 
+
+<%= image_tag 'dips.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <h4 id="nacho">Served with Tri Color Tortilla Chips</h4>
 
@@ -97,8 +135,15 @@
 
 <h2 class="menu-head">Nachos</h2>
 
-<%= image_tag 'nacho.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-4"></div>
+  <div class="col-sm-6">
 
+
+<%= image_tag 'nacho.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
@@ -119,8 +164,15 @@
 
 <h2 class="menu-head">Ensaladas (Salads)</h2>
 
-<%= image_tag 'salad.jpg', class: 'menu-photo' %>
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-9">
 
+
+<%= image_tag 'salad.jpg', class: 'img-fluid' %>
+
+</div>
+</div>
 
 <div class="container">
   <div class="row">
