--- a/app/views/main/dessert.html.erb
+++ b/app/views/main/dessert.html.erb
@@ -10,7 +10,7 @@
   <div class="col-sm-6">
 
 
-<%= image_tag 'dessert.jpg', class: 'menu-photo' %>
+<%= image_tag 'dessert.jpg', class: 'img-fluid' %>
 
 </div>
 </div>
